@@ -32,12 +32,3 @@ cloud_final_modules:
  - keys-to-console
  - phone-home
  - final-message
-
-## logging.cfg contains info on logging output for cloud-init
-#include logging.cfg
-
-## distro.cfg contains the local distro specific values
-#opt_include distro.cfg
-
-##local.cfg is for local overrides of any of the above
-#opt_include local.cfg
