@@ -38,6 +38,7 @@ setup(name='cloud-init',
                'cloud-init-cfg.py',
                ],
       data_files=[('/etc/cloud', glob('config/*.cfg')),
+                  ('/etc/cloud/cloud.cfg.d', glob('config/cloud.cfg.d/*')),
                   ('/etc/cloud/templates', glob('templates/*')),
                   ('/etc/init', glob('upstart/*.conf')),
                   ('/usr/share/cloud-init', []),
